@@ -1,5 +1,15 @@
 2003-01-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03622] Re: Error occured while reset
+	* file.c (uncompress_stream): child process initialized
+	* terms.c (close_tty): close unless stdin,out,err
+		(reset_tty): flush_tty, close_tty
+		(write1): flush_tty
+		(refresh): flush_tty
+		(flush_tty): check ttyf
+
+2003-01-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03620] -m option and header
 	* buffer.c (reshapeBuffer): fix reading from stdin
 				fix -m option
@@ -6258,4 +6268,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.662 2003/01/10 16:08:19 ukai Exp $
+$Id: ChangeLog,v 1.663 2003/01/10 16:16:44 ukai Exp $
